--- a/style.css
+++ b/style.css
@@ -57,7 +57,10 @@ body{
     position: absolute;
     width: 100%;
     bottom: 0;
-    color: var(--ligth-font);
     text-align: center;
+}
+
+.container__paragraph-temp-feesLike {
+    margin-top: 2rem;
 }
 
